--- a/style.css
+++ b/style.css
@@ -11,11 +11,44 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-image: url(../img/01_page_background/page-background.jpg);
+    background-image: url(./img/01_page_background/page-background.jpg);
     background-size: 100% 100%;
     overflow-y: hidden;
 }
 
 canvas {
     border-radius: 16px;
+}
+
+.overlay {
+    width: 720px;
+    height: 480px;
+    position:relative;
+}
+
+.button-container {
+    position: absolute;
+    top: 85%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+button {
+    background-color: rgb(224, 146, 51);
+    font-family: 'Chentenario', '';
+    border-radius: 4px;
+    cursor: pointer;
+    height: 32px;
+    width: 150px;
+}
+
+button:hover {
+    transition: ease-in-out 0.2s;
+    transform: translate(1px,1px);
+    background-color: gold;
+}
+
+.d-none {
+    display: none;
 }
