--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ canvas {
 .overlay {
     width: 720px;
     height: 480px;
-    position:relative;
+    position: relative;
 }
 
 .button-container {
@@ -45,10 +45,63 @@ button {
 
 button:hover {
     transition: ease-in-out 0.2s;
-    transform: translate(1px,1px);
+    transform: translate(1px, 1px);
     background-color: gold;
 }
 
 .d-none {
     display: none;
 }
+
+.start-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.start-screen img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+.start-screen button {
+    /* position: absolute; */
+    width: 150px;
+    height: 50px;
+    font-size: 18px;
+    background-color: rgb(224, 146, 51);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.start-screen button:hover {
+    transition: ease-in-out 0.2s;
+    transform: translate(1px, 1px);
+    background-color: gold;
+}
+
+.start-screen-buttons{
+    position: absolute;
+    top: 40px;
+    width: 720px;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
+/* #start {
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#settings {
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} */
