--- a/style.css
+++ b/style.css
@@ -32,10 +32,12 @@ canvas {
     width: 100%;
     display: flex;
     justify-content: space-around;
+    z-index: 1;
 }
 
 button {
     background-color: rgb(224, 146, 51);
+    color: white;
     font-family: 'Chentenario', '';
     border-radius: 4px;
     cursor: pointer;
@@ -50,7 +52,7 @@ button:hover {
 }
 
 .d-none {
-    display: none;
+    display: none !important;
 }
 
 .start-screen {
@@ -68,7 +70,6 @@ button:hover {
 }
 
 .start-screen button {
-    /* position: absolute; */
     width: 150px;
     height: 50px;
     font-size: 18px;
@@ -109,4 +110,81 @@ button:hover {
     width: 36px !important;
     height: 30px;
     margin: 8px;
+    z-index: 10
+}
+
+.key-assignment {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
+}
+
+.key-assignment img {
+    width: 32px;
+}
+
+.key-assignment div {
+    display: flex;
+    align-items: center;
+    margin: 16px;
+}
+
+.stats {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    color: white;
+    font-size: 18px;
+}
+
+.stats img {
+    width: 35%;
+    height: 50%;
+}
+
+.stats-text {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.stat-numbers p{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 20%;
+    font-size: 16px;
+    font-size: 24px;
+}
+
+.stats p{
+    display: flex;
+    justify-content: center;
+}
+
+.winning-screen button {
+    position: absolute;
+    bottom: 20px;
+}
+
+.winning-screen {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
 }
