--- a/style.css
+++ b/style.css
@@ -225,6 +225,36 @@ button:hover {
     h1 {
         display: none;
     }
+
+    button{
+        margin: 8px;
+    }
+
+    .start-screen img {
+        border-radius: 0;
+    }
+
+
+
+
+
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+    
+    .fullscreen-container {
+        height: calc(var(--vh, 1vh) * 100);
+    }
+
+
+
+
+
+
+
 }
 
 @media only screen and (max-height: 480px) {
@@ -246,9 +276,42 @@ button:hover {
 
     .start-screen-buttons {
         width: 100%;
-        /* height: 30px; */
-        /* font-size: 12px; */
     }
+
+    .icons-container{
+        bottom: 60%;
+    }
+
+    .button-container{
+        top:85%;
+        justify-content: space-between;
+    }
+
+    button{
+        margin: 8px;
+    }
+
+    .start-screen img {
+        border-radius: 0;
+    }
+
+
+
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+    
+    .fullscreen-container {
+        height: calc(var(--vh, 1vh) * 100);
+        width: 100%
+    }
+
+
+
+
 }
 
 @media only screen and (max-width: 560px) {
@@ -257,5 +320,85 @@ button:hover {
         height: 30px;
         font-size: 12px;
     }
+    
+}
 
+.mobile-controls {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    z-index: 9999;
+    pointer-events: auto;
+}
+
+.control-btn {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    font-size: 24px;
+    background-color: rgba(0, 0, 0, 0.2);
+    color: white;
+    margin: 8px;
+    -webkit-touch-callout: none; /* iOS: Kein Kontextmenü */
+    -webkit-user-select: none;
+    user-select: none;
+    touch-action: none; /
+}
+
+
+.control-btn img{
+    width: 32px;
+}
+
+.arrowTouch{
+    display:flex;
+    align-items: flex-end;
+    padding: 8px;
+}
+
+.right-touch {
+    display:flex;
+    flex-direction: column;
+    padding: 8px;
+}
+
+#orientation-warning {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.95);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.fullscreenBtn {
+    position:absolute;
+    top: 10%;
+    right: 0;
+    height: 32px;
+    width: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 8px;
+}
+
+.fullscreenBtn img{
+    width: 26px;
+    height: 26px;
+}
+
+.fullscreen-container-big{
+    width: 100%;
+    height: 100vh;
 }
