--- a/style.css
+++ b/style.css
@@ -204,125 +204,6 @@ button:hover {
     margin: 18px 0;
 }
 
-
-
-@media only screen and (max-width: 720px) {
-    .overlay {
-        border-radius: 0;
-        /* height: 100vh; */
-        width: 100%;
-    }
-
-    .start-screen-buttons {
-        width: 100%
-    }
-
-    canvas {
-        border-radius: 0;
-        width: 100%;
-    }
-
-    h1 {
-        display: none;
-    }
-
-    button{
-        margin: 8px;
-    }
-
-    .start-screen img {
-        border-radius: 0;
-    }
-
-
-
-
-
-    html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: hidden;
-    }
-    
-    .fullscreen-container {
-        height: calc(var(--vh, 1vh) * 100);
-    }
-
-
-
-
-
-
-
-}
-
-@media only screen and (max-height: 480px) {
-    .overlay {
-        border-radius: 0;
-        height: 100vh;
-        width: 100%;
-    }
-
-    canvas {
-        border-radius: 0;
-        height: 100vh;
-        width: 100%;
-    }
-
-    h1 {
-        display: none;
-    }
-
-    .start-screen-buttons {
-        width: 100%;
-    }
-
-    .icons-container{
-        bottom: 60%;
-    }
-
-    .button-container{
-        top:85%;
-        justify-content: space-between;
-    }
-
-    button{
-        margin: 8px;
-    }
-
-    .start-screen img {
-        border-radius: 0;
-    }
-
-
-
-    html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: hidden;
-    }
-    
-    .fullscreen-container {
-        height: calc(var(--vh, 1vh) * 100);
-        width: 100%
-    }
-
-
-
-
-}
-
-@media only screen and (max-width: 560px) {
-    .start-screen button {
-        width: 75px;
-        height: 30px;
-        font-size: 12px;
-    }
-    
-}
-
 .mobile-controls {
     width: 100%;
     position: absolute;
@@ -342,7 +223,7 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.2);
     color: white;
     margin: 8px;
-    -webkit-touch-callout: none; /* iOS: Kein Kontextmenü */
+    -webkit-touch-callout: none;
     -webkit-user-select: none;
     user-select: none;
     touch-action: none; /
@@ -401,4 +282,103 @@ button:hover {
 .fullscreen-container-big{
     width: 100%;
     height: 100vh;
+}
+
+@media only screen and (max-width: 720px) {
+    .overlay {
+        border-radius: 0;
+        width: 100%;
+    }
+
+    .start-screen-buttons {
+        width: 100%
+    }
+
+    canvas {
+        border-radius: 0;
+        width: 100%;
+    }
+
+    h1 {
+        display: none;
+    }
+
+    button{
+        margin: 8px;
+    }
+
+    .start-screen img {
+        border-radius: 0;
+    }
+
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+    
+    .fullscreen-container {
+        height: calc(var(--vh, 1vh) * 100);
+    }
+}
+
+@media only screen and (max-height: 480px) {
+    .overlay {
+        border-radius: 0;
+        height: 100vh;
+        width: 100%;
+    }
+
+    canvas {
+        border-radius: 0;
+        height: 100vh;
+        width: 100%;
+    }
+
+    h1 {
+        display: none;
+    }
+
+    .start-screen-buttons {
+        width: 100%;
+    }
+
+    .icons-container{
+        bottom: 60%;
+    }
+
+    .button-container{
+        top:85%;
+        justify-content: space-between;
+    }
+
+    button{
+        margin: 8px;
+    }
+
+    .start-screen img {
+        border-radius: 0;
+    }
+
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+    
+    .fullscreen-container {
+        height: calc(var(--vh, 1vh) * 100);
+        width: 100%
+    }
+}
+
+@media only screen and (max-width: 560px) {
+    .start-screen button {
+        width: 75px;
+        height: 30px;
+        font-size: 12px;
+    }
+    
 }
